--- a/todolist/pom.xml
+++ b/todolist/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>br.com.trevejo</groupId>
 	<artifactId>todolist</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0.</version>
 	<name>todolist</name>
 	<description>Gerenciador de tarefas</description>
 	<url/>
@@ -63,6 +63,12 @@
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 			<scope>runtime</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>at.favre.lib</groupId>
+			<artifactId>bcrypt</artifactId>
+			<version>0.10.2</version>
 		</dependency>
 	</dependencies>
 
