--- a/todolist/Dockerfile
+++ b/todolist/Dockerfile
@@ -8,7 +8,7 @@ COPY . .
 RUN apt-get install maven -y
 RUN mvn clean install
 
-FROM openjdk:17-jdk-slim
+FROM eclipse-temurin:17-jre
 
 EXPOSE 8080
 
